# secbuf

./: .cargoignore  .gitignore  Cargo.toml  LICENSE  README.md
benches/: buffer_bench.rs
examples/: basic_usage.rs  network_simulation.rs  stream_processing.rs
src/: connection.rs  error.rs  lib.rs
src/buffer/: core.rs  ops.rs  unsafe_ops.rs
src/circular/: buffer.rs
src/pool/: fast.rs  standard.rs  stats.rs
tests/: integration_tests.rs
