[package]
name = "secbuf"
version = "0.1.5"
edition = "2024"
rust-version = "1.85.0"
authors = ["WYCLIFF <wycliffomondi01@gmail.com>"]
description = "Secure, high-performance buffer management with automatic memory zeroing and aggressive cleanup"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WYCLIFF001/secbuf"
homepage = "https://github.com/WYCLIFF001/secbuf"
documentation = "https://docs.rs/secbuf"
keywords = ["buffer", "security", "pool", "zeroize", "network"]
categories = ["data-structures", "memory-management", "network-programming", "cryptography"]
readme = "README.md"
exclude = [
    ".github/*",
    "benches/*",
    "target/*",
    ".idea/*",
]

[features]
default = []
anyhow = ["dep:anyhow"]

[dependencies]
crossbeam = "0.8.4"
zeroize = { version = "1.8.2", features = ["derive"] }
anyhow = { version = "1.0.101", optional = true }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "buffer_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 2

[profile.bench]
inherits = "release"
debug = true

# Configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# CPU-specific optimizations (uncomment for your platform)
# [build]
# rustflags = ["-C", "target-cpu=native"]